# src/controllers/LoanController.ts
@@ -25,7 +25,7 @@ export class LoanController extends Controller {
   @Post()
   public async createLoan(
     @Body() dto: CreateLoanDto,
-    @Res() fail: TsoaResponse<400, BasicResponseDto>,
+    @Res() badRequest: TsoaResponse<400, BasicResponseDto>,
     @Res() success: TsoaResponse<201, BasicResponseDto>
   ): Promise<void> {
     try {
@@ -39,33 +39,39 @@ export class LoanController extends Controller {
       const newLoan = this.loanService.createLoan(dto);
       return success(201, new BasicResponseDto("Empréstimo cadastrado com sucesso!", newLoan));
     } catch (error: any) {
-      return fail(400, new BasicResponseDto(error.message, error));
+      return badRequest(400, new BasicResponseDto(error.message, error));
     }
   }
 
   @Get()
-  public async listLoans(): Promise<BasicResponseDto> {
+  public async listLoans(
+    @Res() badRequest: TsoaResponse<404, BasicResponseDto>,
+    @Res() success: TsoaResponse<200, BasicResponseDto>
+  ): Promise<BasicResponseDto> {
     try {
       const loans = this.loanService.listLoans();
-      return new BasicResponseDto("Lista de empréstimos encontrada!", loans);
+      return success(200, new BasicResponseDto("Lista de empréstimos encontrada!", loans));
     } catch (error: any) {
-      throw new Error(error.message);
+      return badRequest(404, new BasicResponseDto(error.message, error));
     }
   }
 
   @Put("{id}/devolucao")
   public async updateReturnDateById(
     @Path() id: string,
-    @Res() fail: TsoaResponse<400, BasicResponseDto>,
+    @Res() badRequest: TsoaResponse<404, BasicResponseDto>,
     @Res() success: TsoaResponse<200, BasicResponseDto>
   ): Promise<void> {
     try {
-      this.loanRules.validate({ id, isRequiredField: true });
+      this.loanRules.validate(
+        { id, isRequiredField: true }
+      );
 
       const updatedLoan = this.loanService.updateReturnDateById(id);
       return success(200, new BasicResponseDto("Empréstimo atualizado!", updatedLoan));
     } catch (error: any) {
-      return fail(400, new BasicResponseDto(error.message, error));
+      return badRequest(404, new BasicResponseDto(error.message, error));
     }
   }
 }
+
