# src/controllers/StockController.ts
@@ -27,43 +27,48 @@ export class StockController extends Controller {
   @Post()
   public async createCopy(
     @Body() dto: CreateStockDto,
-    @Res() fail: TsoaResponse<400, BasicResponseDto>,
+    @Res() badRequest: TsoaResponse<400, BasicResponseDto>,
     @Res() success: TsoaResponse<201, BasicResponseDto>
   ): Promise<void> {
     try {
-      const { codigo_exemplar, isbn } = dto;
+      const { isbn, codigo_exemplar } = dto;
 
       this.stockRules.validate(
-        { codigo_exemplar, isRequiredField: true },
-        { ISBN: isbn, isRequiredField: true }
+        { ISBN: isbn, isRequiredField: true },
+        { codigo_exemplar, isRequiredField: true }
       );
 
       const newCopy = this.stockService.createCopy(dto);
       return success(201, new BasicResponseDto("Exemplar cadastrado com sucesso!", newCopy));
     } catch (error: any) {
-      return fail(400, new BasicResponseDto(error.message, error));
+      return badRequest(400, new BasicResponseDto(error.message, error));
     }
   }
 
   @Get()
-  public async listCopies(): Promise<BasicResponseDto> {
+  public async listCopies(
+    @Res() badRequest: TsoaResponse<400, BasicResponseDto>,
+    @Res() success: TsoaResponse<200, BasicResponseDto>,
+  ): Promise<BasicResponseDto> {
     try {
       const copies = this.stockService.listCopies();
-      return new BasicResponseDto("Lista de exemplares encontrada!", copies);
+      return success(200, new BasicResponseDto("Lista de exemplares encontrada!", copies));
     } catch (error: any) {
-      throw new Error(error.message);
+      return badRequest(400, new BasicResponseDto(error.message, error));
     }
   }
 
   @Get("{codigo}")
   public async findCopyById(
-    @Path() codigo: string
+    @Path() codigo: string,
+    @Res() badRequest: TsoaResponse<404, BasicResponseDto>,
+    @Res() success: TsoaResponse<200, BasicResponseDto>
   ): Promise<BasicResponseDto> {
     try {
       const copy = this.stockService.findCopyById(codigo);
-      return new BasicResponseDto("Exemplar encontrado!", copy);
+      return success(200, new BasicResponseDto("Exemplar encontrado!", copy));
     } catch (error: any) {
-      throw new Error(error.message);
+      return badRequest(404, new BasicResponseDto(error.message, error));
     }
   }
 
@@ -71,33 +76,38 @@ export class StockController extends Controller {
   public async updateAvailabilityById(
     @Path() codigo: number,
     @Body() body: { disponivel: boolean },
-    @Res() fail: TsoaResponse<400, BasicResponseDto>,
+    @Res() badRequest: TsoaResponse<400, BasicResponseDto>,
     @Res() success: TsoaResponse<200, BasicResponseDto>
   ): Promise<void> {
     try {
       this.stockRules.validate(
         { codigo_exemplar: codigo, isRequiredField: true },
-        { disponivel: body.disponivel, isRequiredField: true }
+        { disponivel: body?.disponivel, isRequiredField: true }
       );
 
       const updatedCopy = this.stockService.updateAvailability(codigo, body.disponivel);
       return success(200, new BasicResponseDto("Exemplar atualizado!", updatedCopy));
     } catch (error: any) {
-      return fail(400, new BasicResponseDto(error.message, error));
+      return badRequest(400, new BasicResponseDto(error.message, error));
     }
   }
 
   @Delete("{codigo}")
   public async deleteCopyById(
     @Path() codigo: string,
-    @Res() fail: TsoaResponse<400, BasicResponseDto>,
+    @Res() badRequest: TsoaResponse<404, BasicResponseDto>,
     @Res() success: TsoaResponse<200, BasicResponseDto>
-  ): Promise<void> {
+  ): Promise<BasicResponseDto> {
     try {
+      this.stockRules.validate(
+        { codigo_exemplar: codigo, isRequiredField: true }
+      );
+
       const deletedCopy = this.stockService.deleteCopyById(codigo);
       return success(200, new BasicResponseDto("Exemplar deletado!", deletedCopy));
     } catch (error: any) {
-      return fail(400, new BasicResponseDto(error.message, error));
+      return badRequest(404, new BasicResponseDto(error.message, error));
     }
   }
 }
+
